# wasaki

./: .gitignore  README.md  bot.py
converters/: auto_responder_for_wa.py  base_converter.py
testing/: test_speedups.py  testing.py
wasaki/: color.py  command_handler.py  context.py  defaults.py  events.py  exceptions.py  handler.py  message.py  message_parsers.py  prelude.py  sembed.py  styles.py  wasaki.py
wasaki/app/: auto_responder_wa.py  base.py
wasaki/speedups/: .gitignore  READ ME FIRST.txt  __init__.py
wasaki/speedups/rust/: Cargo.toml  init_speedup.py
wasaki/speedups/rust/src/: lib.rs  main.rs
