[package]
name = "rust"
version = "0.1.0"
authors = ["loystonlive"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speedups"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]
